Initial Commit - Major
- Includes changes to facilitate testing integrating the containment testers with the CodeX Insurance Analyst (CIA

- index.html loads main-release.js instead of main.js. main-release contains the "cover" function and example cases.
- ResolutionEngine has set of support implemented
- containmentTestingRunner has an additional TODO comment

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Containment Testing TS</title>
     <script language="javascript" src="./src/plain-js/epilog.js" ></script>
     <script language="javascript" src="./src/plain-js/check.js" ></script>
-    <script language='javascript' type = "module" src='./out/main.js'></script>
+    <script language='javascript' type = "module" src='./out/main-release.js'></script>
 </head>
 <body>
     <p>Text to test that rendering is okay</p>
